# OpenMOA_test

./: .gitignore  CHANGELOG.md  CITATION.cff  CNAME  LICENSE  OpenMOA.code-workspace  OpenMOA_test.code-workspace  README.md  australian_perm2.csv  australian_perm4.csv  australian_perm5.csv  config.json  csv2arff.py  cumulative_results.csv  invoke.yml  predictions.csv  pyproject.toml  summary.csv  tasks.py  test.py  windowed_results.csv
.github/workflows/: pr.md  release.yml
FESL_experiment/datasets/arff/: australian_perm_1.arff  australian_perm_10.arff  australian_perm_2.arff  australian_perm_3.arff  australian_perm_4.arff  australian_perm_5.arff  australian_perm_6.arff  australian_perm_7.arff  australian_perm_8.arff  australian_perm_9.arff  credit-a_perm_1.arff  credit-a_perm_10.arff  credit-a_perm_2.arff  credit-a_perm_3.arff  credit-a_perm_4.arff  credit-a_perm_5.arff  credit-a_perm_6.arff  credit-a_perm_7.arff  credit-a_perm_8.arff  credit-a_perm_9.arff  credit-g_perm_1.arff  credit-g_perm_10.arff  credit-g_perm_2.arff  credit-g_perm_3.arff  credit-g_perm_4.arff  credit-g_perm_5.arff  credit-g_perm_6.arff  credit-g_perm_7.arff  credit-g_perm_8.arff  credit-g_perm_9.arff  diabetes_perm_1.arff  diabetes_perm_10.arff  diabetes_perm_2.arff  diabetes_perm_3.arff  diabetes_perm_4.arff  diabetes_perm_5.arff  diabetes_perm_6.arff  diabetes_perm_7.arff  (+32 more)
FESL_experiment/scripts/: csv_to_10_arff.py
datasets/FESL/: australian.arff  australian_perm1.arff  australian_perm1.csv  australian_perm10.csv  australian_perm2.arff  australian_perm3.arff  australian_perm3.csv  australian_perm4.arff  australian_perm5.arff  credit-g.csv  diabetes.csv  svmguide3.csv
demo/: benchmark_sparse_performance.py  demo_all_datasets.py  demo_datasets.py  demo_dynamicfeaturespace.py  demo_fesl_benchmark_binary.py  demo_fesl_classifier.py  demo_fesl_regressor.py  demo_fobos_benchmark_binary.py  demo_fobos_benchmark_multi.py  demo_fobos_classifier.py  demo_fobos_multiclass.py  demo_fobos_vs_ftrl.py  demo_ftrl_benchmark_binary.py  demo_ftrl_benchmark_multi.py  demo_ftrl_classifier.py  demo_oasf_benchmark_binary.py  demo_oasf_classifier.py  demo_oasf_regressor.py  demo_old3s_benchmark_binary.py  demo_old3s_benchmark_multi.py  demo_old3s_classifier.py  demo_openfeaturestream.py  demo_orf3v_benchmark_binary.py  demo_orf3v_benchmark_multi.py  demo_orf3v_classifier_TDS.py  demo_orf3v_classifier_VFS.py  demo_oslmf_benchmark_binary.py  demo_oslmf_classifier.py  demo_ovfm_benchmark_binary.py  demo_ovfm_classifier.py  demo_owss_benchmark_binary.py  demo_owss_benchmark_multi.py  demo_rsol_benchmark_binary.py  demo_rsol_classifier.py  error_analysis.py  hyperparameter_tuning.py  multi_algorithm_comparison.py  multi_algorithm_comparison1.py  performance_visualization.py  results_export.py  (+1 more)
docker/: docker-compose.yml  dockerfile
docs/: about.rst  conf.py  docker.md  index.rst  installation.rst  tutorials.rst
docs/api/: index.rst
docs/contributing/: docs.rst  learners.md  updating_moajar.md  vcs.md
experiments_final/: final_results.csv
experiments_old3s_binary/: trace_EDS_Adult.csv  trace_EDS_Australian.csv  trace_EDS_German.csv  trace_EDS_InternetAds.csv  trace_EDS_Ionosphere.csv  trace_EDS_Magic04.csv  trace_EDS_Musk.csv  trace_EDS_SVMGuide3.csv  trace_EDS_Spambase.csv  trace_EDS_w8a.csv
experiments_old3s_multiclass/: trace_EDS_DryBean.csv  trace_EDS_Frogs.csv  trace_EDS_Optdigits.csv  trace_EDS_Splice.csv  trace_EDS_Wine.csv
experiments_oslmf_binary/: trace_CDS_Adult.csv  trace_CDS_Australian.csv  trace_CDS_German.csv  trace_CDS_InternetAds.csv  trace_CDS_Ionosphere.csv  trace_CDS_Magic04.csv  trace_CDS_Musk.csv  trace_CDS_SVMGuide3.csv  trace_CDS_Spambase.csv  trace_CDS_w8a.csv  trace_EDS_Adult.csv  trace_EDS_Australian.csv  trace_EDS_German.csv  trace_EDS_InternetAds.csv  trace_EDS_Ionosphere.csv  trace_EDS_Magic04.csv  trace_EDS_Musk.csv  trace_EDS_SVMGuide3.csv  trace_EDS_Spambase.csv  trace_EDS_w8a.csv  trace_TDS_Adult.csv  trace_TDS_Australian.csv  trace_TDS_German.csv  trace_TDS_InternetAds.csv  trace_TDS_Ionosphere.csv  trace_TDS_Magic04.csv  trace_TDS_Musk.csv  trace_TDS_SVMGuide3.csv  trace_TDS_Spambase.csv  trace_TDS_w8a.csv
experiments_ovfm_binary/: trace_CDS_Adult.csv  trace_CDS_Australian.csv  trace_CDS_German.csv  trace_CDS_InternetAds.csv  trace_CDS_Ionosphere.csv  trace_CDS_Magic04.csv  trace_CDS_Musk.csv  trace_CDS_SVMGuide3.csv  trace_CDS_Spambase.csv  trace_CDS_w8a.csv  trace_EDS_Adult.csv  trace_EDS_Australian.csv  trace_EDS_German.csv  trace_EDS_InternetAds.csv  trace_EDS_Ionosphere.csv  trace_EDS_Magic04.csv  trace_EDS_Musk.csv  trace_EDS_SVMGuide3.csv  trace_EDS_Spambase.csv  trace_EDS_w8a.csv  trace_TDS_Adult.csv  trace_TDS_Australian.csv  trace_TDS_German.csv  trace_TDS_InternetAds.csv  trace_TDS_Ionosphere.csv  trace_TDS_Magic04.csv  trace_TDS_Musk.csv  trace_TDS_SVMGuide3.csv  trace_TDS_Spambase.csv  trace_TDS_w8a.csv
experiments_owss_binary/: trace_TDS_Australian.csv  trace_TDS_German.csv  trace_TDS_Ionosphere.csv  trace_TDS_Magic04.csv  trace_TDS_Musk.csv  trace_TDS_SVMGuide3.csv  trace_TDS_Spambase.csv
experiments_owss_multiclass/: trace_CDS_Wine.csv  trace_EDS_DryBean.csv  trace_EDS_Frogs.csv  trace_TDS_Optdigits.csv  trace_TDS_Splice.csv
notebooks/: 00_getting_started.ipynb  01_evaluation.ipynb  02_sklearn.ipynb  03_pytorch.ipynb  04_drift_streams.ipynb  05_new_learner.ipynb  06_advanced_API.ipynb  07_pipelines.ipynb  08_prediction_interval.ipynb  09_automl.ipynb  10_ocl.ipynb  SSL_example.ipynb  anomaly_detection.ipynb  benchmarking.py  clustering.ipynb  drift_detection.ipynb  parallel_ensembles.ipynb  save_and_load_model.ipynb
notebooks/util/: nbmock.py
src/openmoa/: __init__.py  _prepare_jpype.py  _utils.py  env.py  instance.py  misc.py
tests/: conftest.py  test_anomaly_detectors.py  test_classifiers.py  test_datasets.py  test_evaluation.py  test_import.py  test_misc.py  test_moajar.py  test_pi.py  test_progress_bar.py  test_regressors.py  test_sparse_instance.py  test_ssl_classifiers.py  test_stream.py
tests/ocl/: test_datasets.py  test_strategy.py
(+247 files in other folders)
