[build-system]
requires = ["hatchling", "hatch-build-scripts", "wget", "stubgenj", "invoke"]
build-backend = "hatchling.build"

[project]
name = "openmoa"
dynamic = ['version']
description = "OpenMOA: Efficient Machine Learning for Data Streams in Python (Fork of CapyMOA)."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
homepage = "https://openmoa.net"
repository = "https://github.com/ZW-SIYUAN/OpenMOA"
authors = [
    {name="Zhili Wang"},
    {name="Yi He"},
    {name="Heitor Murilo Gomes", email="hmugomes@gmail.com"},
    {name="Anton Lee", email="anton.lee@vuw.ac.nz"}
]
keywords = [
    "MOA",
    "Machine Learning",
    "Data Stream",
    "Online Learning",
    "Stream Learning",
    "Data Stream Mining",
    "Data Mining",
    "Incremental Learning",
    "Concept Drift",
    "Concept Evolution",
    "Concept Shift",
    "Big Data",
    "Data Science",
]

long_description_content_type = "text/markdown"
requires-python = ">=3.9"
dependencies = [
    "jpype1>=v1.5.1",
    "wget",
    "numpy",
    "pandas",
    "pyarrow",
    "matplotlib",
    "scikit-learn",
    "click",
    "seaborn",
    "tqdm",
    "deprecated"
]

[project.optional-dependencies]
dev=[
    "pytest",
    "pytest-subtests",
    "jupyter",
    "nbmake",
    "pytest-xdist",
    "invoke",
    "stubgenj",
    "wget",
    "commitizen~=3.24.0",
    "ruff",
]

doc=[
    "sphinx==8.1.3",
    "pydata-sphinx-theme",
    "sphinx-autobuild",
    "nbsphinx",
    "myst-parser",
    "sphinx_design",
    "interrogate",
    "sphinxcontrib-programoutput"
]

[project.urls]
Documentation = "https://openmoa.net"
Source = "https://github.com/ZW-SIYUAN/OpenMOA"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]
testpaths = ["tests", "src"]
norecursedirs = [
    "docs/*"
]

[tool.hatch]
[tool.hatch.version]
path = "src/openmoa/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openmoa", "src/moa-stubs", "src/com-stubs"]
artifacts = ["src/openmoa/jar/moa.jar", "src/openmoa/jar/Home.class"]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
packages = ["src/openmoa", "src/moa-stubs", "src/com-stubs"]
artifacts = ["src/openmoa/jar/moa.jar", "src/openmoa/jar/Home.class"]
ignore-vcs = true

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
    "python -m invoke build.download-moa",
    "python -m invoke build.stubs"
]
artifacts = []

[tool.semantic_release]
assets = []
commit_message = "chore(version): increment version to {version}"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

version_variables = [
    "src/openmoa/__about__.py:__version__",
    "docker/.env:OPENMOA_VERSION"
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.interrogate]
ignore-semiprivate = true
ignore-private = true
ignore-overloaded-functions = true
ignore-magic = true
exclude=["docs", "tests", "notebooks"]
style = "sphinx"
fail-under = 80
omit-covered-files = true
ignore-module = true

[tool.ruff]
target-version = "py310"